--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+vaadin.launch-browser=true
 spring.application.name=unified-contact-management-system-back-end
 spring.datasource.url=jdbc:mysql://localhost:3306/CompanyX
 spring.datasource.username=root
